modified index from local

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- test modif from srv -->
+<!-- test modif from srv and modified back -->
 
 	
 <html ng-app="myApp" ng-controller="myAppController">
