Changed arbo. Plugged new factory

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <script src="kda.js"></script>
 <script src="playersdb.js"></script>
 <script src="riotapi.js"></script>
+<script src="requesterapi.js"></script>
 <link rel="stylesheet" type="text/css" href="main.css"/>
 <link rel="stylesheet" type="text/css" href="kda.css"/>
 </head>
