--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,21 @@
 
 <body>
 
-<button ng-repeat="player in players.all" ng-click="addPlayer(player.name)">{{player.name}}</button>
+<button 
+	ng-repeat="player in players.all" 	
+	ng-click="addPlayer(player.name)"
+	ng-class="{'selected': players.requested.indexOf(player.name) != -1}"
+	>{{player.name}}</button>
 <br>
 <label>New player<input ng-model="newplayer"></input></label><button ng-click="addPlayer(newplayer)">Add</button>
 
 
 <div class="panel">
-
 	<kda-directive ng-repeat="player in players.requested" name="{{player}}"></kda-directive>
-
 </div>
 	     
 <div class="panel">
-
+	<p >{{ players.requested }} </p>
 </div>
          
 
