changed files path

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <html ng-app="myApp" ng-controller="myAppController">
 <head>
-	<script src="angular.js"></script>
-	<script src="main.js"></script>
-	<script src="kda.js"></script>
-	<script src="chatmodule.js"></script>
-	<script src="playersdb.js"></script>
-	<script src="riotapi.js"></script>
-	<script src="requesterapi.js"></script>
+	<script src="scripts/angular.js"></script>
+	<script src="scripts/main.js"></script>
+	<script src="scripts/kda.js"></script>
+	<script src="scripts/chatmodule.js"></script>
+	<script src="scripts/playersdb.js"></script>
+	<script src="scripts/riotapi.js"></script>
+	<script src="scripts/requesterapi.js"></script>
 	<!--<script src="http://localhost:8082/socket.io/socket.io.js"></script>-->
 	<script src="http://weedoseeds.no-ip.org:8082/socket.io/socket.io.js"></script> 
 
-	<link rel="stylesheet" type="text/css" href="reset.css"/>
-	<link rel="stylesheet" type="text/css" href="main.css"/>
-	<link rel="stylesheet" type="text/css" href="kda.css"/>
-	<link rel="stylesheet" type="text/css" href="chatmodule.css"/>
+	<link rel="stylesheet" type="text/css" href="styles/reset.css"/>
+	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
+	<link rel="stylesheet" type="text/css" href="styles/kda.css"/>
+	<link rel="stylesheet" type="text/css" href="styles/chatmodule.css"/>
 </head>
 
 <body>
