--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 	<script src="scripts/playersdb.js"></script>
 	<script src="scripts/riotapi.js"></script>
 	<script src="scripts/requesterapi.js"></script>
-	<script src="http://localhost:8082/socket.io/socket.io.js"></script>
-	<!--<script src="http://weedoseeds.no-ip.org:8082/socket.io/socket.io.js"></script> -->
+	<!--<script src="http://localhost:8082/socket.io/socket.io.js"></script>-->
+	<script src="http://weedoseeds.no-ip.org:8082/socket.io/socket.io.js"></script> 
 
 	<link rel="stylesheet" type="text/css" href="styles/reset.css"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
