--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <html ng-app="myApp" ng-controller="myAppController">
 <head>
 	<script src="scripts/angular.js"></script>
+	<script src="scripts/angular-cookies.min.js"></script>
+	<script src="scripts/angular-loader.js"></script>
 	<script src="scripts/main.js"></script>
 	<script src="scripts/kda.js"></script>
 	<script src="scripts/playermodule.js"></script>
