can now select game. Check game mode.

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
 	<script src="scripts/playersdb.js"></script>
 	<script src="scripts/riotapi.js"></script>
 	<script src="scripts/requesterapi.js"></script>
-	<!--<script src="http://localhost:8082/socket.io/socket.io.js"></script>-->
-	<script src="http://weedoseeds.no-ip.org:8082/socket.io/socket.io.js"></script> 
+	
+	<script src="http://localhost:8082/socket.io/socket.io.js"></script>
+	<!--<script src="http://weedoseeds.no-ip.org:8082/socket.io/socket.io.js"></script> -->
 
 	<link rel="stylesheet" type="text/css" href="styles/reset.css"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
@@ -44,7 +45,8 @@
 		</div>
 
 		<div class="centerpanel panel">
-			<p class="paneltitle">Stats</p>
+			<div>
+			
 			<div class="stats">
 				<div class="search">
 					<a>Search:</a>
@@ -60,8 +62,9 @@
 				</div>
 
 
-				<playermodule-directive ng-repeat="player in players.requested" name="player"></playermodule-directive>
 				<!--<kda-directive ng-repeat="player in players.requested" name="{{player}}"></kda-directive>-->
+			</div>
+				<playermodule-directive ng-repeat="player in players.requested" name="player"></playermodule-directive>
 			</div>
 
 
